--- a/arch/arm/boot/dts/sun9i-a80-optimus.dts
+++ b/arch/arm/boot/dts/sun9i-a80-optimus.dts
@@ -200,6 +200,10 @@
 	};
 };
 
+&r_rsb {
+	status = "okay";
+};
+
 &r_uart_pins {
 	/* Enable internal pull-up */
 	allwinner,pull = <SUN4I_PINCTRL_PULL_UP>;
